--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
