--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
