--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
